src/objects/Line_Item__c.object
<CustomObject>
    <description>The role of this object is to include different kinds of products, services and fees for specific event. When events will get posted/closed it will generate the transactions for used resources from this object.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Qty__c *  Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargeDetail__c</fullName>
        <formula>HYPERLINK(&quot;/apex/ChargeDetailForResLine?id=&quot;&amp;Id, &quot;ChargeDetail&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ChargeDetail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Charge Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Charge_Item__c.isActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Charge_Item__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Charge_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Choice_Description__c</fullName>
        <formula>Charge_Item__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_charge_if_event_is_cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create charge if event is cancelled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items_Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Liquor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gratuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original_Line_Item</label>
        <referenceTo>Line_Item__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Date__c</fullName>
        <label>Override Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Override_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if you want to override the sales price from reservation line choice object and enter in price.</inlineHelpText>
        <label>Override Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reservation_Line_Cleanup_Time__c</fullName>
        <description>This field tracks when a menu item should end and no be filled and should be cleaned up.</description>
        <label>Reservation Line Cleanup Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reservation_Line_Setup_Time__c</fullName>
        <description>This field tracks the time that the menu choice should be setup and ready to go.</description>
        <label>Reservation Line Setup Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reservation_line__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reservation</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Events</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Room</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Charge_Adjustment_Quantity__c</fullName>
        <label>Service Charge Adjustment Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Charge_Amount__c</fullName>
        <formula>Service_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Charge__c</fullName>
        <description>field contains service charge for this charge</description>
        <label>Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Plated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desserts</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Charge_Name__c</fullName>
        <label>Service Charge Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tax_Adjustment_Quantity__c</fullName>
        <label>Tax Adjustment Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Name__c</fullName>
        <label>Tax Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <formula>Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Amount__c   +  Tax_Amount__c +  Service_Charge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LI-{0000000000}</displayFormat>
        <label>Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <recordTypes>
        <fullName>Adjustment</fullName>
        <active>true</active>
        <description>Use when creating an adjustment on your event.</description>
        <label>Adjustment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Charge</fullName>
        <active>true</active>
        <description>Use when entering items you wish to charge to your event.</description>
        <label>Charge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Menu</fullName>
        <active>true</active>
        <description>Use for adding event related charge items to your banquet.</description>
        <label>Event Menu</label>
    </recordTypes>
    <recordTypes>
        <fullName>Misc_Charges</fullName>
        <active>true</active>
        <description>Use for adding miscellaneous charge items to your banquet.</description>
        <label>Misc. Charges</label>
    </recordTypes>
    <recordTypes>
        <fullName>POS_Dining_Room</fullName>
        <active>true</active>
        <description>Use for adding POS dining charge items to your banquet</description>
        <label>POS Dining Room</label>
    </recordTypes>
    <recordTypes>
        <fullName>POS_Retail</fullName>
        <active>true</active>
        <description>Use for adding POS retail charge items to your banquet.</description>
        <label>POS Retail</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Event_Charge_Item_cannot_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISBLANK( Reservation_line__r.Post_Close_Date_Time__c ) ), ISBLANK( Override_Date__c ))</errorConditionFormula>
        <errorMessage>This event has already been closed. Please enter in an override date for this event charge item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>For_Adjustment_Qty_should_only_be_negat</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.Name == &apos;Adjustment&apos; ,  Qty__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Qty__c</errorDisplayField>
        <errorMessage>Quantity should be negative for Adjustments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>For_Charge_Qty_should_only_be_Positive</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.Name == &apos;Charge&apos; ,  Qty__c &lt;= 0)</errorConditionFormula>
        <errorDisplayField>Qty__c</errorDisplayField>
        <errorMessage>Quantity should be positive for Charge items.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_and_tax_adjustment_Check</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name == &apos;Adjustment&apos; &amp;&amp;(ISNULL(Qty__c) || Qty__c == 0) &amp;&amp; (ISNULL(Service_Charge_Adjustment_Quantity__c) || Service_Charge_Adjustment_Quantity__c ==0) &amp;&amp; (ISNULL(Tax_Adjustment_Quantity__c) || Tax_Adjustment_Quantity__c==0)</errorConditionFormula>
        <errorMessage>You must enter Either Service charge adjustment quatity (OR) Tax adjustment quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>negativeQty</fullName>
        <active>false</active>
        <errorConditionFormula>Qty__c  &lt;= 0</errorConditionFormula>
        <errorMessage>Quantity can not be negative or zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tax_exempt_can_not_change_for_closed_evt</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( ISBLANK( Reservation_line__r.Post_Close_Date_Time__c ) ), CreatedDate &lt; Reservation_line__r.Post_Close_Date_Time__c, ISCHANGED( Tax_Exempt__c))</errorConditionFormula>
        <errorMessage>Cannot Check/ Un-Check the Tax Exempt Box for Line Items created before Event is Closed/Posted</errorMessage>
    </validationRules>
</CustomObject>